<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.ovidiuconeac.client.features.food.presentation.view.FoodActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/server_connection"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fruits" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarFruit1"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/fruit1"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="text" />

            <Button
                android:id="@+id/get_fruit1"
                android:text="@string/get"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:layout_width="0dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarFruit2"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/fruit2"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="text" />

            <Button
                android:id="@+id/get_fruit2"
                android:text="@string/get"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:layout_width="0dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheeses" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarCheese1"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/cheese1"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="text" />

            <Button
                android:id="@+id/get_cheese1"
                android:text="@string/get"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:layout_width="0dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarCheese2"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/cheese2"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="text" />

            <Button
                android:id="@+id/get_cheese2"
                android:text="@string/get"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:layout_width="0dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sweets" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarSweet1"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/sweet1"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="text" />

            <Button
                android:id="@+id/get_sweet1"
                android:text="@string/get"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:layout_width="0dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarSweet2"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/sweet2"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="text" />

            <Button
                android:id="@+id/get_sweet2"
                android:text="@string/get"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:layout_width="0dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>